adding service and repo layers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,6 @@ logging.level.org.hibernate.type=trace
 #spring.datasource.url=jdbc:h2:mem:rajbir
 
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/bank
+spring.datasource.url=jdbc:mysql://localhost:3306/gms
 spring.datasource.username=root
 spring.datasource.password=password
