--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,10 @@
 spring.h2.console.enabled=true
 #Turn Statistics on
 spring.jpa.properties.hibernate.generate_statistics=true
+#spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.DefaultNamingStrategy
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 logging.level.org.hibernate.stat=debug
 # Show all queries
 spring.jpa.show-sql=true
