--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,23 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.boot.experimental</groupId>
+            <artifactId>spring-boot-thin-launcher</artifactId>
+            <version>1.0.16.BUILD-SNAPSHOT</version>
+        </dependency>
+		<!-- Form Validation using Annotations -->
+		<!--<dependency>-->
+			<!--<groupId>javax.validation</groupId>-->
+			<!--<artifactId>validation-api</artifactId>-->
+			<!--<version>1.1.0.Final</version>-->
+		<!--</dependency>-->
+		<!--<dependency>-->
+			<!--<groupId>org.hibernate</groupId>-->
+			<!--<artifactId>hibernate-validator</artifactId>-->
+			<!--<version>4.1.0.Final</version>-->
+		<!--</dependency>-->
+    </dependencies>
 
 	<build>
 		<plugins>
