--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,19 +2,26 @@
 spring.h2.console.enabled=true
 #Turn Statistics on
 spring.jpa.properties.hibernate.generate_statistics=true
+
+# Define Hibenate Naming Strategy
 #spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.DefaultNamingStrategy
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-logging.level.org.hibernate.stat=debug
-# Show all queries
+
+# Show all queriesorg.hibernate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type=trace
+logging.level.org.hibernate.stat=debug
+
+# SQL statements and parameters
+#log4j.logger.org.hibernate.SQL=debug
+#log4j.logger.org.hibernate.type.descriptor.sql=trace
 
 #spring.datasource.url=jdbc:h2:mem:rajbir
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/gms
 spring.datasource.username=root
 spring.datasource.password=password
