--- a/pom.xml
+++ b/pom.xml
@@ -59,11 +59,18 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!--TODO: why do i need this ? (google biMap ?)-->
         <dependency>
             <groupId>org.springframework.boot.experimental</groupId>
             <artifactId>spring-boot-thin-launcher</artifactId>
             <version>1.0.16.BUILD-SNAPSHOT</version>
         </dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.2</version>
+			<scope>provided</scope>
+		</dependency>
 		<!-- Form Validation using Annotations -->
 		<!--<dependency>-->
 			<!--<groupId>javax.validation</groupId>-->
