--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 .idea/
 code-nov-2017.md
-target/
+target/classes
+target/generated-sources
+target/generated-test-sources
+target/maven-archiver
+target/maven-status
+target/surefire-reports
+target/test-classes
 **/*.log
