--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,13 @@ logging.level.org.hibernate.stat=debug
 
 #spring.datasource.url=jdbc:h2:mem:rajbir
 
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/gms
-spring.datasource.username=root
-spring.datasource.password=password
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost:3306/gms
+#spring.datasource.username=root
+#spring.datasource.password=password
+
+
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=SPRING_DATASOURCE_URL
+#spring.datasource.username=SPRING_DATASOURCE_USERNAME
+#spring.datasource.password=SPRING_DATASOURCE_PASSWORD
