--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,5 @@ target/maven-archiver
 target/maven-status
 target/surefire-reports
 target/test-classes
+target/gms-0.0.1-SNAPSHOT.jar.original
 **/*.log
