--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,10 +21,10 @@ logging.level.org.hibernate.stat=debug
 
 #spring.datasource.url=jdbc:h2:mem:rajbir
 
-#spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://localhost:3306/gms
-#spring.datasource.username=root
-#spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:3306/gms
+spring.datasource.username=root
+spring.datasource.password=password
 
 
 #spring.jpa.hibernate.ddl-auto=update
