--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
 			<version>1.18.2</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>net.kaczmarzyk</groupId>
+			<artifactId>specification-arg-resolver</artifactId>
+			<version>1.1.1</version>
+		</dependency>
 		<!-- Form Validation using Annotations -->
 		<!--<dependency>-->
 			<!--<groupId>javax.validation</groupId>-->
