--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,10 @@
 			<artifactId>specification-arg-resolver</artifactId>
 			<version>1.1.1</version>
 		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>com.fasterxml.jackson.datatype</groupId>-->
+			<!--<artifactId>jackson-datatype-jsr310</artifactId>-->
+		<!--</dependency>-->
 		<!-- Form Validation using Annotations -->
 		<!--<dependency>-->
 			<!--<groupId>javax.validation</groupId>-->
