--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,31 +1,35 @@
-# Enabling H2 Console
-spring.h2.console.enabled=true
-#Turn Statistics on
-spring.jpa.properties.hibernate.generate_statistics=true
 
-# Define Hibenate Naming Strategy
-#spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.DefaultNamingStrategy
-#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+# Define Hibernate Naming Strategy
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-# Show all queriesorg.hibernate
+# Show all queries
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type=trace
 logging.level.org.hibernate.stat=debug
-
-# SQL statements and parameters
-#log4j.logger.org.hibernate.SQL=debug
-#log4j.logger.org.hibernate.type.descriptor.sql=trace
-
-#spring.datasource.url=jdbc:h2:mem:rajbir
 
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/gms
 spring.datasource.username=root
 spring.datasource.password=password
 
+
+
+
+
+# Enabling H2 Console
+#spring.h2.console.enabled=true
+#Turn Statistics on
+#spring.jpa.properties.hibernate.generate_statistics=true
+
+# Define Hibenate Naming Strategy
+#spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.DefaultNamingStrategy
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+# SQL statements and parameters
+#log4j.logger.org.hibernate.SQL=debug
+#log4j.logger.org.hibernate.type.descriptor.sql=trace
 
 #spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=SPRING_DATASOURCE_URL
