--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
 			<groupId>net.kaczmarzyk</groupId>
 			<artifactId>specification-arg-resolver</artifactId>
 			<version>1.1.1</version>
+			<!--<classifier>rajbir-patch</classifier>-->
 		</dependency>
 		<!--<dependency>-->
 			<!--<groupId>com.fasterxml.jackson.datatype</groupId>-->
@@ -102,6 +103,13 @@
 	</build>
 
 	<repositories>
+		<repository>
+			<id>kaczmarzyk.net</id>
+			<url>http://repo.kaczmarzyk.net</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
 		<repository>
 			<id>spring-snapshots</id>
 			<name>Spring Snapshots</name>
