--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,12 @@
 			<version>1.1.1</version>
 			<!--<classifier>rajbir-patch</classifier>-->
 		</dependency>
+		<!-- Google libs dependency for google token auth https://developers.google.com/api-client-library/java/google-api-java-client/setup -->
+		<dependency>
+			<groupId>com.google.api-client</groupId>
+			<artifactId>google-api-client</artifactId>
+			<version>1.24.1</version>
+		</dependency>
 		<!--<dependency>-->
 			<!--<groupId>com.fasterxml.jackson.datatype</groupId>-->
 			<!--<artifactId>jackson-datatype-jsr310</artifactId>-->
