--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -28,7 +28,7 @@ spring:
     jpa:
         show-sql: true
         hibernate:
-            ddl-auto: none
+            ddl-auto: create
             naming:
                 naming-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
                 physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
